--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-Hello World
+<HTML>
+<HEAD>
+    <meta name="viewport" content="width=device-width, target-densitydpi=device-dpi"/>
+    <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <script>
+
+   function setTitle(){
+      <!--window.JSInterface.doShare("高街时尚","邀请您来注册","https://bug.testin.cn/index.htm#/defects")-->
+      <!--var userInfo = window.JSInterface.getUserInfo();-->
+      <!--window.alert(userInfo);-->
+      <!--window.JSInterface.setTextTitle("test");-->
+      <!--window.location.href="taohuocang://post/topic?topicId=10&pidAddress=http://p7.highstreet.top/Fp&brandName=挚爱美妆"-->
+      <!--window.location.href="taohuocang://post/H5?url=http://www.baidu.com"-->
+      <!--window.JSInterface.getAddressInfo();-->
+      <!--window.JSInterface.setTitleVisible(false);-->
+      <!--window.JSInterface.toVipGoodsList();-->
+      window.JSInterface.doShareGenerateImage("test","test2","www.baidu.com");
+   }
+
+    function getAddressInfoBack(userInfo){
+      window.alert(userInfo);
+   }
+
+  function method(){
+    <!--window.JSInterface.setTitleVisible(true);-->
+    <!--window.JSInterface.setTitleBackgroudColor("#FF00FF");-->
+          window.JSInterface.toGoodsDetial("246470");
+
+  }
+
+ function iosUserInfo(userInfo){
+    window.alert(userInfo);
+  }
+
+
+    </script>
+</HEAD>
+<BODY>
+<span>测试js使用</span>
+<button id='btntest' onclick='setTitle()'>JS调用原生方法</button>
+<button id='btntest2' onclick='method()'>JS调用原生方法2</button>
+</BODY>
+</HTML>
