修改原生交互方法

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!--window.JSInterface.getAddressInfo();-->
       <!--window.JSInterface.setTitleVisible(false);-->
       <!--window.JSInterface.toVipGoodsList();-->
-      window.JSInterface.doShareGenerateImage("test","test2","www.baidu.com");
+      window.JSInterface.toast("测试2");
    }
 
     function getAddressInfoBack(userInfo){
@@ -24,7 +24,7 @@
   function method(){
     <!--window.JSInterface.setTitleVisible(true);-->
     <!--window.JSInterface.setTitleBackgroudColor("#FF00FF");-->
-          window.JSInterface.toGoodsDetial("246470");
+          window.JSInterface.toast("测试");
 
   }
 
@@ -38,6 +38,6 @@
 <BODY>
 <span>测试js使用</span>
 <button id='btntest' onclick='setTitle()'>JS调用原生方法</button>
-<button id='btntest2' onclick='method()'>JS调用原生方法2</button>
+<button id='btntest2' onclick='method()'>JS调用原生方法</button>
 </BODY>
 </HTML>
